# Glados-On-Top

./: .gitattributes  .gitignore  CHANGELOG.md  DEFENSE_ONE_PAGE_CHEATSHEET.md  DEFENSE_PLAN.md  DEFENSE_QA_CHEATSHEET.md  DEFENSE_README.md  DEFENSE_SLIDES_OUTLINE.md  DEFENSE_SOURCES_DISCLAIMER.md  DEFENSE_SUMMARY.md  Glados-On-Top.cabal  Makefile  README.md  Test-Parser.ps1  glados  hie.yaml  package.yaml  run_tests.sh  stack.yaml  test-workflow.sh  test_all_examples.sh  test_parser.sh
.github/workflows/: CI-CD.yml  ci.yml  coverage-report.yml  mirror.yml  pages.yml  release.yml
app/: Main.hs
app/compiler/: Main.hs
app/vm/: Main.hs
bonus-linter/: ARCHITECTURE.md  INDEX.md  README.md  RESUME_FINAL.md  SUMMARY.md  TESTING.md  UPDATE_GUIDE.md  UPGRADE_GUIDE.md  WORK_DONE.md  create-vsix.sh  language-configuration.json  package.json  test.rat  tsconfig.json
bonus-linter/src/: extension.ts  server.ts
bonus-linter/syntaxes/: ratatouille.tmLanguage.json
bonus/cpp-vm/: CMakeLists.txt  Makefile
bonus/cpp-vm/benchmarks/: InstructionBenchmarks.cpp
bonus/cpp-vm/include/common/: ErrorCode.hpp  ErrorCode.inl  IStack.hpp  IStack.tpp  Types.hpp
bonus/cpp-vm/include/core/: InstructionSequence.hpp  ProgramCounter.hpp
bonus/cpp-vm/include/interfaces/: IFunctionManager.hpp  IPatternMatcher.hpp  IProcessManager.hpp
bonus/cpp-vm/include/process/: Message.hpp  Process.hpp  ProcessIdentity.hpp  ProcessMailbox.hpp  ProcessTemplate.hpp
bonus/cpp-vm/src/: main.cpp
bonus/cpp-vm/src/core/: InstructionStack.cpp  InstructionStack.hpp  InstructionStack.tpp  RuntimeValue.cpp  RuntimeValue.hpp  RuntimeValue.tpp  RuntimeValue_New.hpp  RuntimeValue_New.inl
bonus/cpp-vm/src/loader/: BytecodeLoader.cpp  BytecodeLoader.hpp  InstructionDecoder.cpp  InstructionDecoder.hpp
bonus/cpp-vm/src/process/: Message.cpp  Process.cpp  ProcessMailbox.cpp  ProcessTemplate.cpp
bonus/cpp-vm/src/vm/: ExecutionEngine.cpp  ExecutionEngine.hpp  ExecutionEngine_Optimized.hpp  FunctionManager.cpp  FunctionManager.hpp  HandlerRegistration.hpp  IInstructionHandler.hpp  Instruction.hpp  Instruction.inl  InstructionDispatcher.cpp  InstructionDispatcher.hpp  InstructionDispatcher.inl  PatternMatcher.cpp  PatternMatcher.hpp  ProcessManager.cpp  ProcessManager.hpp  VMContext.cpp  VMContext.hpp  VariableStore.cpp  VariableStore.hpp  VariableStore.tpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMachine.tpp
bonus/cpp-vm/src/vm/handlers/: ArithmeticHandlers.cpp  ArithmeticHandlers.hpp  ComparisonHandlers.cpp  ComparisonHandlers.hpp  ControlFlowHandlers.cpp  ControlFlowHandlers.hpp  StackHandlers.cpp  StackHandlers.hpp  VariableHandlers.cpp  VariableHandlers.hpp
bonus/cpp-vm/tests/: NewVariantWrapperTest.cpp  VMInstructionTests.cpp
bonus/linter/: .eslintrc.json  .vscodeignore  ARCHITECTURE.md  README.md  build.sh  changelog.md  install-permanent.sh  install.sh  package.json
bonus/mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  BYTECODE_ARCHITECTURE.md  CONTRIBUTING.md  EXECUTION.md  FUNCTIONS_ROADMAP.md  NEXUS_CONCEPT.md  PARSER_MODULE.md  PROJECT_STRATEGY.md  RATATOUILLE_SYNTAX.md  SECURITY_ANALYSIS.md  SYNTAX.md  TODO_AND_ROADMAP.md  nexus.bnf  ratatouille.bnf  ratatouille.ebnf
docs/modules/: AST_MODULE.md  BYTECODE_MODULE.md  ERROR_MODULE.md  VM_MODULE.md
examples/: ratatouille_tests.sh
examples/advanced/: Calculator.rat  Calculator.rtbc  MaybeEither.rat  ModernCounter.rat  Router.rat  SpawnAndMessage.rat  SpawnAndMessage.rtbc  (+5 more)
src/: Builtins.hs  Env.hs  Errors.hs  Eval.hs  Lexer.hs  Lib.hs  Parser.hs  Types.hs
test/: ASTExtendedSpec.hs  ASTSpec.hs  AdvancedSpec.hs  BytecodeSpec.hs  CommonParserSpec.hs  CoverageSpec.hs  IntegrationSpec.hs  InterpreterSpec.hs  ParserSpec.hs  PatternParserSpec.hs  RuntimeSpec.hs  Spec.hs  VMSpec.hs  arithmetic.scm  errors.scm  functions.scm  integration.scm  lists.scm
(+99 files in other folders)
